# OIDC_Axum

./: Cargo.toml  README.md
src/: lib.rs  main.rs  user.rs  util.rs
src/routes/: account.rs  authorize.rs  login.rs  mod.rs
static/: index.html
