[package]
name = "oidc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "oidc"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-session = "3.0.0"
axum = "0.3.0"
openid = "0.9.3"
reqwest = "0.11.6"
anyhow = "1.0.45"
http = "0.2.5"
serde = { "version" = "1", features = ["derive"] }
uuid = { "version" = "0.8.2", features = ["v4", "serde"] }
tower-http = { "version" = "0.1", features = ["fs", "trace"] }
cookie = "0.15.1"
